src/test/resources/invalid/typecheck/Field_NotFound.vas
class Main is
    this() is
        this.unknown
    end
end
